Adding login functionality

--- a/package.json
+++ b/package.json
@@ -14,8 +14,9 @@
     "lint": "eslint --ext .js,.vue src test/unit/specs test/e2e/specs"
   },
   "dependencies": {
-    "bootstrap": "^4.1.0",
-    "bootstrap-vue": "^2.0.0-rc.7",
+    "axios": "^0.19.2",
+    "bootstrap": "^4.5.0",
+    "bootstrap-vue": "^2.15.0",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
   },
